src/objects/qvm_intuit_api__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>OAuth and endpoint settings for connecting to the Intuit REST API for Quickbooks</description>
    <fields>
        <fullName>AccessTokenRequestUrl__c</fullName>
        <defaultValue>&quot;https://oauth.intuit.com/oauth/v1/get_access_token&quot;</defaultValue>
        <label>Access Token Request URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ApiName__c</fullName>
        <defaultValue>&quot;Intuit&quot;</defaultValue>
        <label>API Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>Consumer key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <label>ConsumerSecret</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realm__c</fullName>
        <label>Quickbooks Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTokenUrl__c</fullName>
        <defaultValue>&quot;https://oauth.intuit.com/oauth/v1/get_request_token&quot;</defaultValue>
        <label>Request token URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ServiceBaseAddress__c</fullName>
        <defaultValue>&quot;https://sandbox-quickbooks.api.intuit.com/v3/&quot;</defaultValue>
        <label>Service base address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TokenValidForDays__c</fullName>
        <description>Number of days an issued token is valid for.  Leave blank for unlimited.</description>
        <label>Token valid for days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserAgent__c</fullName>
        <defaultValue>&quot;qvm-salesforce/dev&quot;</defaultValue>
        <inlineHelpText>The user agent string sent in the HTTP requests to the API</inlineHelpText>
        <label>User agent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAuthorizationUrl__c</fullName>
        <defaultValue>&quot;https://appcenter.intuit.com/Connect/Begin&quot;</defaultValue>
        <label>User authorization URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>QVM Intuit QuickBooks API</label>
</CustomObject>